[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://QR.tscn" type="PackedScene" id=2]
[ext_resource path="res://TextEdit.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
scale = Vector2( 1, 0.996118 )
script = ExtResource( 1 )

[node name="QR" parent="." instance=ExtResource( 2 )]
position = Vector2( 344, 64.2494 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 10.0
margin_top = 10.0
margin_right = 311.0
margin_bottom = 588.0
rect_scale = Vector2( 1, 0.994041 )
custom_constants/separation = 8

[node name="Version" type="OptionButton" parent="Control/VBoxContainer"]
margin_right = 301.0
margin_bottom = 20.0
disabled = true
text = "QR Version 1"

[node name="DrawPatterns" type="Button" parent="Control/VBoxContainer"]
margin_top = 28.0
margin_right = 301.0
margin_bottom = 48.0
keep_pressed_outside = true
text = "Draw Patterns"

[node name="DrawTimingPatterns" type="Button" parent="Control/VBoxContainer"]
margin_top = 56.0
margin_right = 301.0
margin_bottom = 76.0
keep_pressed_outside = true
text = "Draw Timing Patterns"

[node name="EncodingMode" type="OptionButton" parent="Control/VBoxContainer"]
margin_top = 84.0
margin_right = 301.0
margin_bottom = 104.0
text = "(1) NUMERIC - not available"
items = [ "(1) NUMERIC - not available", null, true, 1, null, "(2) ALPHANUMERIC - not available", null, true, 2, null, "(4) BYTE", null, false, 4, null, "(8) KANJI - not available", null, true, 8, null ]
selected = 0

[node name="EC_Level" type="OptionButton" parent="Control/VBoxContainer"]
margin_top = 112.0
margin_right = 301.0
margin_bottom = 132.0
text = "Error Correction Level"

[node name="TextEdit" type="TextEdit" parent="Control/VBoxContainer"]
margin_top = 140.0
margin_right = 301.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
context_menu_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
caret_block_mode = true
caret_blink = true
caret_moving_by_right_click = false
script = ExtResource( 3 )

[node name="DrawLength" type="Button" parent="Control/VBoxContainer"]
margin_top = 188.0
margin_right = 301.0
margin_bottom = 208.0
keep_pressed_outside = true
text = "Draw Length"

[node name="DrawText" type="Button" parent="Control/VBoxContainer"]
margin_top = 216.0
margin_right = 301.0
margin_bottom = 236.0
keep_pressed_outside = true
text = "Draw Text"

[node name="DrawEnd" type="Button" parent="Control/VBoxContainer"]
margin_top = 244.0
margin_right = 301.0
margin_bottom = 264.0
keep_pressed_outside = true
text = "Draw End"

[node name="DrawPadSimbols" type="Button" parent="Control/VBoxContainer"]
margin_top = 272.0
margin_right = 301.0
margin_bottom = 292.0
keep_pressed_outside = true
text = "Draw Pad Symbols"

[node name="DrawECBlocks" type="Button" parent="Control/VBoxContainer"]
margin_top = 300.0
margin_right = 301.0
margin_bottom = 320.0
keep_pressed_outside = true
text = "Draw EC Blocks"

[node name="Mask" type="OptionButton" parent="Control/VBoxContainer"]
margin_top = 328.0
margin_right = 301.0
margin_bottom = 348.0
text = "Mask Type"

[node name="ApplyMask" type="Button" parent="Control/VBoxContainer"]
margin_top = 356.0
margin_right = 301.0
margin_bottom = 376.0
keep_pressed_outside = true
text = "Apply Mask"

[node name="DrawECFormatBits" type="Button" parent="Control/VBoxContainer"]
margin_top = 384.0
margin_right = 301.0
margin_bottom = 404.0
keep_pressed_outside = true
text = "Draw EC Format bits"

[node name="MaskFormat" type="Button" parent="Control/VBoxContainer"]
margin_top = 412.0
margin_right = 301.0
margin_bottom = 432.0
keep_pressed_outside = true
text = "Mask Format Bits"

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 440.0
margin_right = 301.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Clear" type="Button" parent="Control/VBoxContainer"]
margin_top = 558.0
margin_right = 301.0
margin_bottom = 578.0
keep_pressed_outside = true
text = "Clear QR"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -301.0
margin_bottom = 578.0
rect_scale = Vector2( 1, 0.994041 )
custom_constants/separation = 0

[node name="Control" type="Control" parent="Control/VBoxContainer2"]
margin_right = 301.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer2"]
margin_top = 10.0
margin_right = 301.0
margin_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start creating your QR code!
Add patterns that will help orient your code in the process of reading
"

[connection signal="pressed" from="Control/VBoxContainer/DrawPatterns" to="." method="_on_Draw_Patterns_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DrawTimingPatterns" to="." method="_on_DrawTimingPatterns_pressed"]
[connection signal="item_focused" from="Control/VBoxContainer/EncodingMode" to="." method="_on_EncodingMode_item_focused"]
[connection signal="item_selected" from="Control/VBoxContainer/EncodingMode" to="." method="_on_EncodingMode_item_selected"]
[connection signal="item_selected" from="Control/VBoxContainer/EC_Level" to="." method="_on_EC_Level_item_selected"]
[connection signal="pressed" from="Control/VBoxContainer/DrawLength" to="." method="_on_DrawLength_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DrawText" to="." method="_on_DrawText_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DrawEnd" to="." method="_on_DrawEnd_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DrawPadSimbols" to="." method="_on_DrawPadSimbols_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DrawECBlocks" to="." method="_on_DrawECBlocks_pressed"]
[connection signal="item_selected" from="Control/VBoxContainer/Mask" to="." method="_on_Mask_item_selected"]
[connection signal="pressed" from="Control/VBoxContainer/ApplyMask" to="." method="_on_ApplyMask_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/DrawECFormatBits" to="." method="_on_DrawECFormatBits_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MaskFormat" to="." method="_on_MaskFormat_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Clear" to="." method="_on_Clear_pressed"]
